# shopping_assistant_crewai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
evals/: README.md
scripts/: run_cli.sh
src/shop_assistant/: crew.py  main.py  settings.py
src/shop_assistant/config/: agents.yaml  tasks.yaml
src/shop_assistant/schemas/: product.py  recommendation.py  user_request.py
src/shop_assistant/services/: guardrails.py  ranking.py
src/shop_assistant/tools/: serper_shopping.py
src/shop_assistant/tools/retailer/: bestbuy.py  walmart.py
tests/unit/: test_guardrails.py
